--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@pusher/chatkit-server": "^0.12.2",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "firebase": "^5.4.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
