--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma": "^0.7.1",
     "firebase": "^5.4.2",
     "vue": "^2.5.17",
+    "vue-avatar": "^2.1.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
