--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@pusher/chatkit": "^0.7.17",
     "@pusher/chatkit-server": "^0.12.2",
     "axios": "^0.18.0",
-    "bulma": "^0.7.1",
+    "buefy": "^0.6.7",
     "firebase": "^5.4.2",
     "vue": "^2.5.17",
     "vue-avatar": "^2.1.6",
