--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.18.0",
     "buefy": "^0.6.7",
     "firebase": "^5.4.2",
+    "lodash": "^4.17.11",
+    "underscore": "^1.9.1",
     "vue": "^2.5.17",
     "vue-avatar": "^2.1.6",
     "vue-router": "^3.0.1",
